 2015-05-10 20:46  hvlad 
   M src/jrd/Attachment.cpp
   M src/jrd/extds/ExtDS.cpp
   M src/jrd/extds/ExtDS.h
   M src/jrd/extds/InternalDS.cpp
Fixed few stability issues with EDS related with cases when external connection is broken unexpectedly.

 2015-05-10 03:03  robocop 
   M src/common/isc_file.cpp
Misc.

 2015-05-10 01:12  asfernandes 
   M src/common/isc_file.cpp
   M src/msgs/facilities2.sql
Misc.

 2015-05-08 16:46  dimitr 
   M src/jrd/btr.cpp
Fixed CORE-4786: Problematic key value (when attempt to insert duplicate in PK/UK) is not shown where length of key >= 127 characters.

 2015-05-06 16:25  alexpeshkoff 
   M src/auth/SecureRemotePassword/server/SrpServer.cpp
   M src/dsql/DdlNodes.epp
Some more postfixes for CORE-4760

 2015-05-06 13:47  alexpeshkoff 
   M src/remote/client/interface.cpp
Postfix for CORE-4760: it was bad idea to call upper() method for UTF string

 2015-05-05 12:40  dimitr 
   M src/isql/isql.epp
Fixed bad handling of zero-length segments coming from internally filtered blobs. In particular, this fixes ISQL crash in bugs.core_4380.

 2015-05-04 16:24  asfernandes 
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/dsql/Parser.cpp
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/msgs.h
   M src/include/gen/sql_code.h
   M src/include/gen/sql_state.h
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/msgs/system_errors2.sql
Fixed CORE-4781 - Maximum string length (32765 bytes) is not validated.

 2015-05-04 11:45  hvlad 
   M builds/win32/msvc10/common.vcxproj
   M builds/win32/msvc10/common.vcxproj.filters
   M builds/win32/msvc12/common.vcxproj
   M builds/win32/msvc12/common.vcxproj.filters
   M src/common/isc_file.cpp
Windows implementation of ISC_utf8Upper. Refactoring. Update VC10 and VC12 builds.

 2015-05-03 18:36  asfernandes 
   M builds/posix/Makefile.in
Copy new API include files to the Linux target directory.

 2015-05-03 06:20  robocop 