@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:31831
+  FORMAL BUILD NUMBER:31832
 */
 
-#define PRODUCT_VER_STRING "3.0.0.31831"
-#define FILE_VER_STRING "WI-T3.0.0.31831"
-#define LICENSE_VER_STRING "WI-T3.0.0.31831"
-#define FILE_VER_NUMBER 3, 0, 0, 31831
+#define PRODUCT_VER_STRING "3.0.0.31832"
+#define FILE_VER_STRING "WI-T3.0.0.31832"
+#define LICENSE_VER_STRING "WI-T3.0.0.31832"
+#define FILE_VER_NUMBER 3, 0, 0, 31832
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "31831"
+#define FB_BUILD_NO "31832"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Beta 2"
